--- a/css/style.css
+++ b/css/style.css
@@ -7633,7 +7633,9 @@ h1, h2, h3, h4, h5,
       font-weight: 400;
       color: #b3b3b3;
       border-bottom: 2px solid #b3b3b3; }
-
+      .HomePhotography .photography-entry{
+        height: 425px;
+      }
 .photography-entry {
   height: 280px;
   display: block;
